--- a/ui/src/app/pages/login/login.component.html
+++ b/ui/src/app/pages/login/login.component.html
@@ -1,22 +1,26 @@
 <br/>
 <br/>
 <div class="container">
-  <form>
+  <form #f="ngForm" name="loginForm" novalidate>
     <div class="form-group row">
       <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        <!--Refrence variable name should not be same as variable defined in Component
+          Ref:  http://4dev.tech/2016/09/angular2-error-cannot-assign-to-a-reference-or-variable-zone-root-task-promise-then-value-error-cannot-assign-to-a-reference-or-variable/
+        -->
+        <input type="email" #userEmail="ngModel" name="useremail" [(ngModel)]="useremail" class="form-control" id="inputEmail3" placeholder="Email">
       </div>
     </div>
     <div class="form-group row">
       <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+        <input type="password" #userPassword="ngModel" name="userpassword" [(ngModel)]="userpassword" class="form-control" id="inputPassword3"
+          placeholder="Password">
       </div>
-    </div> 
+    </div>
     <div class="form-group row">
       <div class="offset-sm-2 col-sm-10">
-        <button type="submit"  uiSref="dashboard" class="btn btn-primary">Sign in</button>
+        <button type="submit" (click)="login(f.value, f.valid)" class="btn btn-primary">Sign in</button>
       </div>
     </div>
   </form>
