--- a/ui/src/app/pages/login/login.component.html
+++ b/ui/src/app/pages/login/login.component.html
@@ -33,7 +33,7 @@
 
 
     <div class="form-group row">
-      <div class="offset-sm-2 col-sm-10">
+      <div class="col-sm-10">
         <button type="submit" (click)="login(f.value, f.valid)" [disabled]="!f.valid" class="btn btn-primary">Sign in</button>
       </div>
     </div>
