--- a/ui/src/app/pages/login/login.component.html
+++ b/ui/src/app/pages/login/login.component.html
@@ -1,13 +1,10 @@
-<br/>
-<br/>
+<div class="jumbotron">
 <div class="container">
   <form #f="ngForm" name="loginForm" novalidate>
     <div class="form-group row" [ngClass]="{ 'has-danger': !(userEmail.valid || (userEmail.pristine && !f.submitted))}">
 
       <div class="col-sm-10">
-        <!--Refrence variable name should not be same as variable defined in Component
-          Ref:  http://4dev.tech/2016/09/angular2-error-cannot-assign-to-a-reference-or-variable-zone-root-task-promise-then-value-error-cannot-assign-to-a-reference-or-variable/
-        -->
+
         <div class="input-group margin-bottom-sm">
           <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
           <input class="form-control" type="text" required email #userEmail="ngModel" name="useremail" [(ngModel)]="useremail" placeholder="Email address">
@@ -38,4 +35,5 @@
       </div>
     </div>
   </form>
+</div>
 </div>
